crates/loxide_interpreter/tests/snapshots/integration@call__bool.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
true(); // expect runtime error: Can only call functions and classes.


>>>>> Error Section <<<<<
  × Function call on a non-callable value
   ╭────
 1 │ true(); // expect runtime error: Can only call functions and classes.
   · ──┬─
   ·   ╰── expect a callable value here, but got type `boolean`
   ╰────
